--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+growl-for-linux (0.8.5-2) unstable; urgency=medium
+
+  * debian/control
+    - Bump debhelper version to 11.
+    - Bump standard version to 4.1.3. No other changes are required.
+  * debian/copyright
+    - Fix insecure protocol for the URI.
+  * debian/compat
+    - Bump compatibility level to 11.
+
+ -- Kentaro Hayashi <hayashi@clear-code.com>  Thu, 22 Feb 2018 00:32:31 +0900
+
 growl-for-linux (0.8.5-1) unstable; urgency=medium
 
   * New upstream release
