--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ growl-for-linux (0.8.5-2) unstable; urgency=medium
   * debian/control
     - Bump debhelper version to 11.
     - Bump standard version to 4.1.3. No other changes are required.
+    - Add Vcs-* fields.
   * debian/copyright
     - Fix insecure protocol for the URI.
   * debian/compat
